update templates and add link checks

--- a/tcn/ui/templates/tcn/categories/index.html
+++ b/tcn/ui/templates/tcn/categories/index.html
@@ -34,7 +34,9 @@
       <ul>
         {% for art in category.get_ordered_children.live.specific|slice:':3' %}
         <li>
-          <a href="{% url 'tcn:redirect' art.link.slug %}">
+          <a
+            href="{% if art.link %}{% url 'tcn:redirect' art.link.slug %}{% else %}{% pageurl art %}{% endif %}"
+          >
             {% if art.is_breaking %}
             <span
               class="tooltip flex tooltip-error"
