--- a/tcn/ui/templates/tcn/articles/id.html
+++ b/tcn/ui/templates/tcn/articles/id.html
@@ -8,30 +8,47 @@
 
 <!---->
 {% block meta %}
-<meta property="og:url" content="{% short_link article.link.slug %}" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="{{ home.title }}" />
+<meta name="twitter:title" content="{{ home.title }}" />
+<meta property="twitter:domain" content="{{ request.get_host }}" />
 <meta
   property="og:description"
-  content="{{ home.title }} | {{ article.headline }}"
+  content="{{ article.title }} | {{ article.headline }}"
+/>
+<meta
+  name="twitter:description"
+  content="{{ article.title }} | {{ article.headline }}"
 />
 <meta
   property="og:image"
   content="{{ request.scheme }}://{{ request.get_host }}{% image_url article.image 'fill-1200x630' %}"
 />
-
 <meta name="twitter:card" content="summary_large_image" />
-<meta property="twitter:domain" content="{{ request.get_host }}" />
-<meta property="twitter:url" content="{% short_link article.link.slug %}" />
-<meta name="twitter:title" content="{{ home.title }}" />
-<meta
-  name="twitter:description"
-  content="{{ home.title }} | {{ article.description }}"
-/>
 <meta
   name="twitter:image"
   content="{{ request.scheme }}://{{ request.get_host }}{% image_url article.image 'fill-1200x630' %}"
 />
+{% if article.link %}
+<meta
+  property="og:url"
+  content="{{ request.scheme }}://{{ request.get_host }}{% url 'tcn:redirect' article.link.slug %}"
+/>
+<meta
+  property="twitter:url"
+  content="{{ request.scheme }}://{{ request.get_host }}{% url 'tcn:redirect' article.link.slug %}"
+/>
+{% else %}
+<meta
+  property="og:url"
+  content="{{ request.scheme }}://{{ request.get_host }}{% pageurl article %}"
+/>
+<meta
+  property="twitter:url"
+  content="{{ request.scheme }}://{{ request.get_host }}{% pageurl article %}"
+/>
+{% endif %}
+<!---->
 {% endblock %}
 
 <!---->
@@ -136,7 +153,7 @@
         data-tip="{% translate 'Login to follow' %}"
       >
         <a
-          href="{% url 'tcn:login' %}?next={% url 'tcn:redirect' article.link.slug %}"
+          href="{% url 'tcn:login' %}?next={{ request.path }}"
           class="btn btn-square btn-soft btn-sm btn-primary md:btn-md 2xl:btn-lg"
         >
           <i data-lucide="user-plus" class="size-4 lg:size-6"></i>
@@ -252,7 +269,7 @@
           data-tip="{% translate 'Login to save' %}"
         >
           <a
-            href="{% url 'tcn:login' %}?next={% url 'tcn:redirect' article.link.slug %}"
+            href="{% url 'tcn:login' %}?next={{ request.path }}"
             class="btn btn-square btn-soft btn-sm btn-success md:btn-md 2xl:btn-lg"
           >
             <i data-lucide="bookmark" class="size-4 lg:size-6"></i>
@@ -261,6 +278,8 @@
         </div>
         {% endif %}
 
+        <!---->
+        {% if article.link %}
         <div
           id="btn-copy"
           class="tooltip tooltip-left tooltip-primary rtl:tooltip-right"
@@ -268,7 +287,7 @@
         >
           <button
             class="btn btn-copy btn-square btn-sm btn-primary md:btn-md 2xl:btn-lg"
-            data-clipboard-text="{% short_link article.link.slug %}"
+            data-clipboard-text="{{ request.scheme }}://{{ request.get_host }}{% url 'tcn:redirect' article.link.slug %}"
           >
             <i
               id="clipboard"
@@ -290,12 +309,49 @@
         >
           <a
             class="btn btn-copy btn-square btn-sm btn-info md:btn-md 2xl:btn-lg"
-            href="https://www.facebook.com/sharer/sharer.php?u={% short_link article.link.slug %}"
+            href="https://www.facebook.com/sharer/sharer.php?u={{ request.scheme }}://{{ request.get_host }}{% url 'tcn:redirect' article.link.slug %}"
           >
             <i data-lucide="facebook" class="size-4 lg:size-6"></i>
             <span class="sr-only">{% trans 'Facebook' %}</span>
           </a>
         </div>
+        {% else %}
+        <div
+          id="btn-copy"
+          class="tooltip tooltip-left tooltip-primary rtl:tooltip-right"
+          data-tip="{% trans 'Copy URL' %}"
+        >
+          <button
+            class="btn btn-copy btn-square btn-sm btn-primary md:btn-md 2xl:btn-lg"
+            data-clipboard-text="{{ request.scheme }}://{{ request.get_host }}{% pageurl article %}"
+          >
+            <i
+              id="clipboard"
+              data-lucide="clipboard"
+              class="size-4 lg:size-6"
+            ></i>
+            <i
+              id="clipboard-check"
+              data-lucide="clipboard-check"
+              class="hidden size-4 lg:size-6"
+            ></i>
+            <span class="sr-only">{% trans 'Copy URL' %}</span>
+          </button>
+        </div>
+
+        <div
+          class="tooltip tooltip-left tooltip-info rtl:tooltip-right"
+          data-tip="{% trans 'Facebook' %}"
+        >
+          <a
+            class="btn btn-copy btn-square btn-sm btn-info md:btn-md 2xl:btn-lg"
+            href="https://www.facebook.com/sharer/sharer.php?u={{ request.scheme }}://{{ request.get_host }}{% pageurl article %}"
+          >
+            <i data-lucide="facebook" class="size-4 lg:size-6"></i>
+            <span class="sr-only">{% trans 'Facebook' %}</span>
+          </a>
+        </div>
+        {% endif %}
       </div>
     </div>
   </div>
