Refactor article URLs and update search functionality for consistency

--- a/tcn/ui/templates/registration/base.html
+++ b/tcn/ui/templates/registration/base.html
@@ -222,7 +222,7 @@
             data-tip="{% trans 'Breaking' %}"
           >
             <a
-              href="{% url 'tcn:articles' %}?is_breaking=True"
+              href="{% url 'tcn:articles' %}?is_breaking=true"
               class="btn btn-square btn-sm btn-error animate-pulse md:btn-md 2xl:btn-lg"
             >
               <i data-lucide="alert-circle" class="size-4 lg:size-6"></i>
