--- a/tcn/ui/templates/tcn/articles/id.html
+++ b/tcn/ui/templates/tcn/articles/id.html
@@ -175,7 +175,7 @@
         data-tip="{% trans 'Breaking' %}"
       >
         <a
-          href="{% url 'tcn:articles' %}?is_breaking=True"
+          href="{% url 'tcn:articles' %}?is_breaking=true"
           class="badge badge-sm badge-error md:badge-md xl:badge-lg 2xl:badge-xl"
         >
           <i data-lucide="alert-circle" class="size-4 lg:size-6"></i>
