--- a/tcn/ui/templates/tcn/base.html
+++ b/tcn/ui/templates/tcn/base.html
@@ -135,7 +135,7 @@
                         data-tip="{% trans 'Breaking' %}"
                       >
                         <a
-                          href="{% url 'tcn:articles' %}?is_breaking=True"
+                          href="{% url 'tcn:articles' %}?is_breaking=true"
                           class="btn btn-square btn-sm btn-error animate-pulse md:btn-md 2xl:btn-lg"
                         >
                           <i
@@ -442,7 +442,7 @@
               <a href="{% pageurl home %}">{% trans 'Home' %}</a>
             </li>
             <li>
-              <a href="{% url 'tcn:articles' %}?is_breaking=True">
+              <a href="{% url 'tcn:articles' %}?is_breaking=true">
                 {% trans 'Breaking' %}
               </a>
             </li>
