--- a/tcn/ui/templates/tcn/components/article-2.html
+++ b/tcn/ui/templates/tcn/components/article-2.html
@@ -6,10 +6,7 @@
   <article
     class="relative card bg-base-100 size-full border border-base-300 hover:bg-base-200 card-sm md:card-md xl:card-lg 2xl:card-xl"
   >
-    <a
-      class="absolute inset-0 z-10"
-      href="{% if article.link %}{% url 'tcn:redirect' article.link.slug %}{% else %}{% pageurl article %}{% endif %}"
-    >
+    <a class="absolute inset-0 z-10" href="{{ article.short_link }}">
       <span class="sr-only">{% trans 'Read' %}</span>
     </a>
 
