--- a/tcn/ui/templates/tcn/components/article.html
+++ b/tcn/ui/templates/tcn/components/article.html
@@ -6,10 +6,7 @@
   <article
     class="card border border-base-300 overflow-hidden image-full relative bg-base-100 hover:bg-base-200 card-sm md:card-md xl:card-lg 2xl:card-xl size-full group-first:flex-col lg:flex-col"
   >
-    <a
-      class="absolute inset-0 z-10"
-      href="{% if article.link %}{% url 'tcn:redirect' article.link.slug %}{% else %}{% pageurl article %}{% endif %}"
-    >
+    <a class="absolute inset-0 z-10" href="{{ article.short_link }}">
       <span class="sr-only">{% trans 'Read' %}</span>
     </a>
 
