Refactor templates for improved styling and accessibility
- Updated icon references in base.html for better clarity.
- Enhanced API template (api.html) with consistent tooltip usage and improved branding.
- Modified login template (login.html) to include static styles and reorganized user links for better accessibility.
- Adjusted base template (base.html) to ensure proper RTL support and improved font rendering.

--- a/tcn/ui/templates/registration/base.html
+++ b/tcn/ui/templates/registration/base.html
@@ -437,12 +437,12 @@
         >
           <label for="profile-drawer" class="drawer-button">
             <i
-              data-lucide="sidebar"
-              class="is-drawer-open:hidden size-4 lg:size-6"
+              data-lucide="sidebar-open"
+              class="is-drawer-open:hidden size-4 lg:size-6 rtl:rotate-180"
             ></i>
             <i
               data-lucide="sidebar-close"
-              class="is-drawer-close:hidden size-4 lg:size-6"
+              class="is-drawer-close:hidden size-4 lg:size-6 rtl:rotate-180"
             ></i>
             <span class="is-drawer-close:sr-only">{% trans 'Close' %}</span>
           </label>
