--- a/tcn/ui/templates/tcn/base.html
+++ b/tcn/ui/templates/tcn/base.html
@@ -71,7 +71,7 @@
     {% endblock %}
   </head>
 
-  <body class="rtl:font-kufi font-sans antialiased">
+  <body class="font-sans antialiased rtl:font-kufi">
     {% wagtailuserbar %}
 
     <div class="drawer">
@@ -125,7 +125,7 @@
                                 class="-rotate-45 lg:size-8 2xl:size-10"
                               ></i>
                             </div>
-                            <span class="sr-only"> {{ home.title }} </span>
+                            <span class="sr-only">{{ home.title }}</span>
                           </a>
                         </h1>
                       </li>
