--- a/tcn/ui/templates/rest_framework/api.html
+++ b/tcn/ui/templates/rest_framework/api.html
@@ -1,139 +1,160 @@
-{% extends 'rest_framework/base.html' %}{% load i18n %}
+{% extends 'rest_framework/base.html' %}{% load i18n static %}
 
 <!---->
-{% block title %}{{ home.title }} | API | {{ name }}{% endblock %}
+{% block title %}{% trans 'The Certain News' %} | API | {{ name }}{% endblock %}
 
 <!---->
-{% block highlight_theme %}{{ block.super }}
-<link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css"
-/>
-{% endblock %}
+{% block styles %}
+<link rel="stylesheet" href="{% static 'tcn/css/styles.css' %}" />
+{{ block.super }}{% endblock %}
 
 <!---->
-{% block toggle_theme %}silk{% endblock %}
+{% block theme %}luxurylight{% endblock %}
 
 <!---->
-{% block theme %}luxury{% endblock %}
+{% block toggle_theme %}luxury{% endblock %}
+
+<!---->
+{% block theme_selector %}{% endblock %}
 
 <!---->
 {% block branding %}
-<div
-  class="tooltip tooltip-right tooltip-primary"
-  data-tip="{% trans 'The Certain News | API' %}"
+<li
+  class="tooltip tooltip-right rtl:tooltip-left tooltip-primary md:hidden"
+  data-tip="{% trans 'The Certain News' %}"
 >
   <h1 class="relative">
-    <a
-      href="/{{ LANGUAGE_CODE }}/api/"
-      class="btn btn-square btn-primary lg:btn-lg"
-    >
-      <i data-lucide="scroll-text"></i>
-      <span class="sr-only">{% trans 'The Certain News | API' %}</span>
+    <a href="/api/" class="btn btn-square btn-primary lg:btn-lg">
+      <div
+        class="btn btn-square btn-primary rotate-45 p-0 shadow-none lg:btn-lg"
+      >
+        <i
+          data-lucide="scroll-text"
+          class="-rotate-45 lg:size-8 2xl:size-10"
+        ></i>
+      </div>
+      <span class="sr-only">{% trans 'The Certain News' %}</span>
     </a>
   </h1>
+</li>
+{% endblock %}
+
+<!---->
+{% block drawer_branding %}
+<li
+  class="tooltip tooltip-right rtl:tooltip-left tooltip-primary"
+  data-tip="{% trans 'The Certain News' %}"
+>
+  <h1 class="relative">
+    <a href="/api/" class="btn btn-square btn-primary lg:btn-lg">
+      <div
+        class="btn btn-square btn-primary rotate-45 p-0 shadow-none lg:btn-lg"
+      >
+        <i
+          data-lucide="scroll-text"
+          class="-rotate-45 lg:size-8 2xl:size-10"
+        ></i>
+      </div>
+      <span class="sr-only">{% trans 'The Certain News' %}</span>
+    </a>
+  </h1>
+</li>
+{% endblock %}
+
+<!---->
+{% block package %}
+<div
+  class="tooltip tooltip-left tooltip-success rtl:tooltip-right"
+  data-tip="{% trans 'Profile' %}"
+>
+  <a
+    href="{% url 'tcn:profile' %}"
+    class="btn btn-sm lg:btn-md 2xl:btn-lg btn-square btn-success"
+  >
+    <i data-lucide="user" class="size-4 lg:size-6"></i>
+    <span class="sr-only">{% trans 'Profile' %}</span>
+  </a>
 </div>
 {% endblock %}
 
 <!---->
-{% block branding_text %}
-<div></div>
-{% endblock %}
-
-<!---->
-{% block userlinks %}
-<li class="tooltip tooltip-right tooltip-primary" data-tip="{% trans 'Home' %}">
-  <a
-    href="/{{ LANGUAGE_CODE }}/api/"
-    class="btn btn-square btn-soft btn-primary"
-  >
-    <i data-lucide="home"></i>
-    <span class="sr-only">{% trans 'Home' %}</span>
+{% block user_links %}
+<li
+  class="is-drawer-close:tooltip is-drawer-close:tooltip-right rtl:is-drawer-close:tooltip-left"
+  data-tip="{% trans 'Home' %}"
+>
+  <a href="/api/">
+    <i data-lucide="home" class="size-4 lg:size-6"></i>
+    <span class="is-drawer-close:sr-only">{% trans 'Home' %}</span>
   </a>
 </li>
 <li
-  class="tooltip tooltip-right tooltip-primary"
+  class="is-drawer-close:tooltip is-drawer-close:tooltip-right rtl:is-drawer-close:tooltip-left"
   data-tip="{% trans 'Pages' %}"
 >
-  <a
-    href="/{{ LANGUAGE_CODE }}/api/pages/"
-    class="btn btn-square btn-soft btn-primary"
-  >
-    <i data-lucide="file-text"></i>
-    <span class="sr-only">{% trans 'Pages' %}</span>
+  <a href="/api/pages/">
+    <i data-lucide="file-text" class="size-4 lg:size-6"></i>
+    <span class="is-drawer-close:sr-only">{% trans 'Pages' %}</span>
   </a>
 </li>
 <li
-  class="tooltip tooltip-right tooltip-primary"
+  class="is-drawer-close:tooltip is-drawer-close:tooltip-right rtl:is-drawer-close:tooltip-left"
   data-tip="{% trans 'Images' %}"
 >
-  <a
-    href="/{{ LANGUAGE_CODE }}/api/images/"
-    class="btn btn-square btn-soft btn-primary"
-  >
-    <i data-lucide="images"></i>
-    <span class="sr-only">{% trans 'Images' %}</span>
+  <a href="/api/images/">
+    <i data-lucide="images" class="size-4 lg:size-6"></i>
+    <span class="is-drawer-close:sr-only">{% trans 'Images' %}</span>
   </a>
 </li>
 <li
-  class="tooltip tooltip-right tooltip-primary"
-  data-tip="{% trans 'Documents' %}"
+  class="is-drawer-close:tooltip is-drawer-close:tooltip-right rtl:is-drawer-close:tooltip-left"
+  data-tip="{% trans 'Docs' %}"
 >
-  <a
-    href="/{{ LANGUAGE_CODE }}/api/documents/"
-    class="btn btn-square btn-soft btn-primary"
-  >
-    <i data-lucide="book-text"></i>
-    <span class="sr-only">{% trans 'Documents' %}</span>
+  <a href="/api/documents/">
+    <i data-lucide="book-text" class="size-4 lg:size-6"></i>
+    <span class="is-drawer-close:sr-only">{% trans 'Docs' %}</span>
   </a>
 </li>
 <li
-  class="tooltip tooltip-right tooltip-primary"
+  class="is-drawer-close:tooltip is-drawer-close:tooltip-right rtl:is-drawer-close:tooltip-left"
   data-tip="{% trans 'Articles' %}"
 >
-  <a
-    href="/{{ LANGUAGE_CODE }}/api/articles/"
-    class="btn btn-square btn-soft btn-primary"
-  >
-    <i data-lucide="newspaper"></i>
-    <span class="sr-only">{% trans 'Articles' %}</span>
+  <a href="/api/articles/">
+    <i data-lucide="newspaper" class="size-4 lg:size-6"></i>
+    <span class="is-drawer-close:sr-only">{% trans 'Articles' %}</span>
   </a>
 </li>
 <li
-  class="tooltip tooltip-right tooltip-primary"
+  class="is-drawer-close:tooltip is-drawer-close:tooltip-right rtl:is-drawer-close:tooltip-left"
   data-tip="{% trans 'Categories' %}"
 >
-  <a
-    href="/{{ LANGUAGE_CODE }}/api/categories/"
-    class="btn btn-square btn-soft btn-primary"
-  >
-    <i data-lucide="layers"></i>
-    <span class="sr-only">{% trans 'Categories' %}</span>
+  <a href="/api/categories/">
+    <i data-lucide="layers" class="size-4 lg:size-6"></i>
+    <span class="is-drawer-close:sr-only">{% trans 'Categories' %}</span>
   </a>
 </li>
 <li
-  class="tooltip tooltip-right tooltip-primary"
+  class="is-drawer-close:tooltip is-drawer-close:tooltip-right rtl:is-drawer-close:tooltip-left"
   data-tip="{% trans 'Users' %}"
 >
-  <a
-    href="/{{ LANGUAGE_CODE }}/api/users/"
-    class="btn btn-square btn-soft btn-primary"
-  >
-    <i data-lucide="users"></i>
-    <span class="sr-only">{% trans 'Users' %}</span>
+  <a href="/api/users/">
+    <i data-lucide="users" class="size-4 lg:size-6"></i>
+    <span class="is-drawer-close:sr-only">{% trans 'Users' %}</span>
   </a>
 </li>
 {% endblock %}
 
 <!---->
-{% block profile_menu %}
+{% block profile_links %}
 <!---->
 {% if request.user.is_authenticated %}
-<li>
-  <a href="/{{ LANGUAGE_CODE }}/api/users/me" class="flex items-center gap-4">
-    <i data-lucide="circle-user" class="size-4 lg:size-6"></i>
-
-    <span>{% trans 'Profile' %}</span>
+<li
+  class="is-drawer-close:tooltip is-drawer-close:tooltip-right rtl:is-drawer-close:tooltip-left"
+  data-tip="{% trans 'Profile' %}"
+>
+  <a href="/api/users/me">
+    <i data-lucide="user" class="size-4 lg:size-6"></i>
+    <span class="is-drawer-close:sr-only">{% trans 'Profile' %}</span>
   </a>
 </li>
 {% endif %}
