--- a/tcn/ui/templates/tcn/blocks/footer.html
+++ b/tcn/ui/templates/tcn/blocks/footer.html
@@ -7,14 +7,13 @@
     <footer class="footer content-center gap-4 size-full">
       <aside class="grid-flow-col gap-4 items-center">
         <h1 class="relative">
-          <a href="/" class="btn btn-square btn-primary lg:btn-lg">
+          <a href="/" class="btn btn-square btn-lg btn-primary lg:btn-xl">
             <div
-              class="btn btn-square btn-primary rotate-45 p-0 shadow-none lg:btn-lg"
+              class="btn btn-square btn-lg btn-primary rotate-45 p-0 shadow-none lg:btn-xl"
             >
-              <i
-                data-lucide="scroll-text"
-                class="-rotate-45 lg:size-8 2xl:size-10"
-              ></i>
+              <span class="-rotate-45 text-sm font-bold font-kufi lg:text-base">
+                ٱليَقِين
+              </span>
             </div>
             <span class="sr-only">{{ self.title }}</span>
           </a>
