--- a/tcn/ui/templates/docs/base.html
+++ b/tcn/ui/templates/docs/base.html
@@ -21,14 +21,16 @@
   data-tip="{{ home.title }} | {% trans 'Docs' %}"
 >
   <h1 class="relative">
-    <a href="{% pageurl home %}" class="btn btn-square btn-primary lg:btn-lg">
+    <a
+      href="{% pageurl home %}"
+      class="btn btn-square btn-lg btn-primary lg:btn-xl"
+    >
       <div
-        class="btn btn-square btn-primary rotate-45 p-0 shadow-none lg:btn-lg"
+        class="btn btn-square btn-lg btn-primary rotate-45 p-0 shadow-none lg:btn-xl"
       >
-        <i
-          data-lucide="scroll-text"
-          class="-rotate-45 lg:size-8 2xl:size-10"
-        ></i>
+        <span class="-rotate-45 text-sm font-bold font-kufi lg:text-base">
+          ٱليَقِين
+        </span>
       </div>
       <span class="sr-only">{{ home.title }} | {% trans 'Docs' %}</span>
     </a>
@@ -120,14 +122,16 @@
   data-tip="{{ home.title }} | {% trans 'Docs' %}"
 >
   <h1 class="relative">
-    <a href="{% pageurl home %}" class="btn btn-square btn-primary lg:btn-lg">
+    <a
+      href="{% pageurl home %}"
+      class="btn btn-square btn-lg btn-primary lg:btn-xl"
+    >
       <div
-        class="btn btn-square btn-primary rotate-45 p-0 shadow-none lg:btn-lg"
+        class="btn btn-square btn-lg btn-primary rotate-45 p-0 shadow-none lg:btn-xl"
       >
-        <i
-          data-lucide="scroll-text"
-          class="-rotate-45 lg:size-8 2xl:size-10"
-        ></i>
+        <span class="-rotate-45 text-sm font-bold font-kufi lg:text-base">
+          ٱليَقِين
+        </span>
       </div>
       <span class="sr-only">{{ home.title }} | {% trans 'Docs' %}</span>
     </a>
