--- a/tcn/ui/templates/registration/password_reset_confirm.html
+++ b/tcn/ui/templates/registration/password_reset_confirm.html
@@ -17,15 +17,14 @@
         <h1 class="relative">
           <a
             href="{% pageurl home %}"
-            class="btn btn-square btn-primary lg:btn-lg"
+            class="btn btn-square btn-lg btn-primary lg:btn-xl"
           >
             <div
-              class="btn btn-square btn-primary rotate-45 p-0 shadow-none lg:btn-lg"
+              class="btn btn-square btn-lg btn-primary rotate-45 p-0 shadow-none lg:btn-xl"
             >
-              <i
-                data-lucide="scroll-text"
-                class="-rotate-45 lg:size-8 2xl:size-10"
-              ></i>
+              <span class="-rotate-45 text-sm font-bold font-kufi lg:text-base">
+                ٱليَقِين
+              </span>
             </div>
             <span class="sr-only">{{ home.title }}</span>
           </a>
