--- a/tcn/ui/templates/rest_framework/api.html
+++ b/tcn/ui/templates/rest_framework/api.html
@@ -28,10 +28,9 @@
       <div
         class="btn btn-square btn-primary rotate-45 p-0 shadow-none lg:btn-lg"
       >
-        <i
-          data-lucide="scroll-text"
-          class="-rotate-45 lg:size-8 2xl:size-10"
-        ></i>
+        <span class="-rotate-45 text-sm font-bold font-kufi lg:text-base">
+          ٱليَقِين
+        </span>
       </div>
       <span class="sr-only">{% trans 'The Certain News' %}</span>
     </a>
@@ -50,10 +49,9 @@
       <div
         class="btn btn-square btn-primary rotate-45 p-0 shadow-none lg:btn-lg"
       >
-        <i
-          data-lucide="scroll-text"
-          class="-rotate-45 lg:size-8 2xl:size-10"
-        ></i>
+        <span class="-rotate-45 text-sm font-bold font-kufi lg:text-base">
+          ٱليَقِين
+        </span>
       </div>
       <span class="sr-only">{% trans 'The Certain News' %}</span>
     </a>
