--- a/tcn/ui/templates/docs/base.html
+++ b/tcn/ui/templates/docs/base.html
@@ -17,7 +17,7 @@
 <!---->
 {% block branding %}
 <li
-  class="tooltip tooltip-right rtl:tooltip-left tooltip-primary"
+  class="tooltip tooltip-right rtl:tooltip-left tooltip-primary lg:hidden"
   data-tip="{{ home.title }} | {% trans 'Docs' %}"
 >
   <h1 class="relative">
