Refactor tooltip classes in various templates to remove unnecessary 'tooltip-open' class
- Updated base.html in blog, careers, and docs templates to remove 'tooltip-open' class from tooltip divs.
- Modified logged_out.html, login.html, password_reset_complete.html, password_reset_confirm.html, password_reset_done.html, password_reset_form.html, and signup.html to remove 'tooltip-open' class from header tooltips.
- Adjusted base.html and index.html in tcn templates to streamline tooltip implementation and improve consistency across the application.

--- a/tcn/ui/templates/blog/base.html
+++ b/tcn/ui/templates/blog/base.html
@@ -114,7 +114,7 @@
 <!---->
 {% block drawer_branding %}
 <div
-  class="tooltip tooltip-right rtl:tooltip-left tooltip-primary tooltip-open"
+  class="tooltip tooltip-right rtl:tooltip-left tooltip-primary"
   data-tip="{{ home.title }} | {% trans 'Blog' %}"
 >
   <h1 class="relative">
