--- a/tcn/ui/templates/tcn/base.html
+++ b/tcn/ui/templates/tcn/base.html
@@ -325,7 +325,7 @@
           <div class="grid gap-4 p-4">
             <header class="flex items-center justify-between gap-4">
               <div
-                class="tooltip tooltip-right rtl:tooltip-left tooltip-primary tooltip-open aspect-square"
+                class="tooltip tooltip-right rtl:tooltip-left tooltip-primary"
                 data-tip="{{ home.title }}"
               >
                 <h1 class="relative">
