--- a/tcn/ui/templates/docs/base.html
+++ b/tcn/ui/templates/docs/base.html
@@ -118,7 +118,7 @@
 <!---->
 {% block drawer_branding %}
 <div
-  class="tooltip tooltip-right rtl:tooltip-left tooltip-primary tooltip-open"
+  class="tooltip tooltip-right rtl:tooltip-left tooltip-primary"
   data-tip="{{ home.title }} | {% trans 'Docs' %}"
 >
   <h1 class="relative">
