--- a/tcn/ui/templates/registration/signup.html
+++ b/tcn/ui/templates/registration/signup.html
@@ -11,7 +11,7 @@
   >
     <div class="mx-auto p-6">
       <header
-        class="tooltip tooltip-bottom tooltip-primary tooltip-open"
+        class="tooltip tooltip-bottom tooltip-primary"
         data-tip="{{ home.title }}"
       >
         <h1 class="relative">
